@@ -5,17 +5,6 @@
 # You can override these values in your remote.properties file
 
 #
-# --- Protocol version (experimental, temporary) ---
-#
-
-# soon, GR will be able to dynamically sense which version
-# of the protocol to use with a given Gallery instance
-# until then, set this to 1 for the legacy protocol
-# or 2 for the new protocol (the corresponding gallery needs
-# to be updated to 1.3.2b11 or later)
-protocolVersion=1
-
-#
 # --- Upload behaviour ---
 #
 
@@ -100,6 +89,6 @@ updateUrlBeta=http://gallery.sourceforge.net/gallery_remote_version_check_beta.p
 #
 # --- Do not edit below this line ---
 #
-version=1.0b11
-releaseDate=2002/11/04
-aboutText=Gallery Remote\n \n \nA part of the Gallery Open-Source Project\nhttp://gallery.sourceforge.net\n \n \nMaintained by Pierre-Luc Paour\n \nInitial version by Chris Smith\n \n \nContributors:\n \nDolan Halbrook\nTim Miller
+version=1.0b12
+releaseDate=2002/11/10
+aboutText=Gallery Remote\n \n \nA part of the Gallery Open-Source Project\nhttp://gallery.sourceforge.net\n \n \nMaintained by Pierre-Luc Paour\n \nInitial version by Chris Smith\n \n \nContributors:\n \nTim Miller\nDolan Halbrook
